--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
     <head>
         <meta charset="UTF-8">
         <link href="https://fonts.googleapis.com/css?family=Lato:100,300,600" rel="stylesheet" type="text/css">
-        <link href="http://code.ionicframework.com/ionicons/2.0.1/css/ionicons.min.css" rel="stylesheet" type="text/css">
+        <link href="https://code.ionicframework.com/ionicons/2.0.1/css/ionicons.min.css" rel="stylesheet" type="text/css">
         <link type="text/css" rel="stylesheet" href="style.css">
 
         <title>Pig Game</title>
@@ -29,11 +29,12 @@
                 </div>
             </div>
 
-            <button class="btn-new"><i class="ion-ios-plus-outline"></i>New game</button>
+            <button class="btn-new" style="display: none"><i class="ion-ios-plus-outline"></i>New game</button>
             <button class="btn-roll"><i class="ion-ios-loop"></i>Roll dice</button>
             <button class="btn-hold"><i class="ion-ios-download-outline"></i>Hold</button>
 
-            <img src="dice-5.png" alt="Dice" class="dice" style="display: none;">
+            <img id="dice-1" src="dice-1.png" alt="Dice" class="dice" style="display: none">
+            <img id="dice-2" src="dice-1.png" alt="Dice" class="dice" style="display: none">
         </div>
 
         <script src="app.js"></script>
